# goa/app/media_types.go
@@ -95,3 +95,20 @@ func (mt *Gtpsession) Validate() (err error) {
 	}
 	return
 }
+
+// A UDP ECHO flow (default view)
+//
+// Identifier: application/vnd.udpechoflow+json; view=default
+type Udpechoflow struct {
+	UDPEchoFlowArg *UDPEchoFlowPayload `form:"UdpEchoFlowArg,omitempty" json:"UdpEchoFlowArg,omitempty" xml:"UdpEchoFlowArg,omitempty"`
+}
+
+// Validate validates the Udpechoflow media type instance.
+func (mt *Udpechoflow) Validate() (err error) {
+	if mt.UDPEchoFlowArg != nil {
+		if err2 := mt.UDPEchoFlowArg.Validate(); err2 != nil {
+			err = goa.MergeErrors(err, err2)
+		}
+	}
+	return
+}
