# goa/swagger/swagger.yaml
@@ -142,6 +142,92 @@ definitions:
     - fteid
     title: 'Mediatype identifier: application/vnd.gtpsession+json; view=default'
     type: object
+  UdpEchoFlowPayload:
+    example:
+      destAddr: 93.108.70.217
+      destPort: 7777
+      recvPacketSize: 1460
+      sendPacketSize: 1460
+      sourcePort: 7777
+      targetBps: 1e+08
+      tos: 0
+      ttl: 255
+    properties:
+      destAddr:
+        description: ECHO destination IPv4 address
+        example: 93.108.70.217
+        format: ipv4
+        type: string
+      destPort:
+        default: 7777
+        description: ECHO destination UDP port
+        example: 7777
+        maximum: 65535
+        minimum: 0
+        type: integer
+      recvPacketSize:
+        description: Receive packet size (including IP header)
+        example: 1460
+        maximum: 1460
+        minimum: 38
+        type: integer
+      sendPacketSize:
+        description: Send packet size (including IP header)
+        example: 1460
+        maximum: 1460
+        minimum: 38
+        type: integer
+      sourcePort:
+        default: 7777
+        description: ECHO source UDP port
+        example: 7777
+        maximum: 65535
+        minimum: 0
+        type: integer
+      targetBps:
+        description: Target bitrate(bps) in SGi not S5/S8
+        example: 1e+08
+        maximum: 1e+11
+        minimum: 1
+        type: integer
+      tos:
+        default: 0
+        description: Type of service
+        example: 0
+        maximum: 255
+        minimum: 0
+        type: integer
+      ttl:
+        default: 255
+        description: Time To Live
+        example: 255
+        maximum: 255
+        minimum: 0
+        type: integer
+    required:
+    - destAddr
+    - sendPacketSize
+    - targetBps
+    - recvPacketSize
+    title: UdpEchoFlowPayload
+    type: object
+  Udpechoflow:
+    description: A UDP ECHO flow (default view)
+    example:
+      UdpEchoFlowArg:
+        destAddr: 93.108.70.217
+        destPort: 7777
+        recvPacketSize: 1460
+        sendPacketSize: 1460
+        sourcePort: 7777
+        targetBps: 1e+08
+        tos: 0
+        ttl: 255
+    properties:
+      UdpEchoFlowArg:
+        $ref: '#/definitions/UdpEchoFlowPayload'
+    title: 'Mediatype identifier: application/vnd.udpechoflow+json; view=default'
+    type: object
   error:
     description: Error response media type (default view)
     example:
@@ -345,6 +431,56 @@ paths:
       summary: showByIMSIandEBI gtpsession
       tags:
       - gtpsession
+  /sgw/{sgwAddr}/gtpsessions/imsi/{imsi}/ebi/{ebi}/udp_echo_flow:
+    post:
+      description: Start UDP ECHO flow by IMSI and EBI
+      operationId: udpEchoFlowByIMSIandEBI#create
+      parameters:
+      - default: 5
+        description: EPS Bearer ID
+        in: path
+        maximum: 15
+        minimum: 5
+        name: ebi
+        required: true
+        type: integer
+      - in: path
+        name: imsi
+        pattern: ^[0-9]{14,15}$
+        required: true
+        type: string
+      - description: SGW GTPv2-C loopback address
+        format: ipv4
+        in: path
+        name: sgwAddr
+        required: true
+        type: string
+      - in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/UdpEchoFlowPayload'
+      produces:
+      - application/vnd.goa.error
+      - application/vnd.udpechoflow+json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/Udpechoflow'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: create udpEchoFlowByIMSIandEBI
+      tags:
+      - udpEchoFlowByIMSIandEBI
 produces:
 - application/json
 - application/xml
